--- a/index.html
+++ b/index.html
@@ -17,11 +17,14 @@
   line-height: 1.6;
 }
 
-    .container {
-      max-width: 900px;
-      margin: auto;
-      padding: 40px 20px;
-    }
+   .container {
+  max-width: 900px;
+  margin: auto;
+  padding: 40px 20px;
+  background: rgba(2, 6, 23, 0.85);
+  border-radius: 16px;
+}
+
     h1, h2 {
       color: #f8fafc;
     }
